<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pemws14.armyoffriends.profile_achievements.ProfileActivity">

    <ScrollView android:id="@+id/ScrlView" android:layout_width="fill_parent" android:layout_height="fill_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp" />

            <TextView
                android:id="@+id/profile_username"
                style="@style/Headline1TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <include layout="@layout/profile_ep_bar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/profile_ep_next_level" />

                <TextView
                    android:id="@+id/profile_ep_next_level"
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/profile_actual_army_strength" />

                <TextView
                    android:id="@+id/profile_actual_army_strength"
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/profile_max_army_strength" />

                <TextView
                    android:id="@+id/profile_max_army_strength"
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/profile_active_soldiers_number" />

                <TextView
                    android:id="@+id/profile_active_soldiers_number"
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/profile_total_soldiers_number" />

                <TextView
                    android:id="@+id/profile_total_soldiers_number"
                    style="@style/RegularTextTheme"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
