<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        style="@style/BGTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!-- The navigation drawer -->
    <RelativeLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffa5282f">


        <LinearLayout
            android:id="@+id/left_drawer_header"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/left_drawer_user_profile_image"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/user_image_description" />

            <LinearLayout
                android:id="@+id/left_drawer_user_profile_username_armystrength_lvl"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/left_drawer_user_profile_username"
                    style="@style/OurDrawerThemeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="18sp" />

                <include layout="@layout/drawer_ep_bar" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/left_drawer_user_profile_armystrength_caption"
                        style="@style/OurDrawerThemeText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_army_strength"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        android:layout_weight="2"
                        android:layout_marginRight="3dp"
                        android:gravity="right" />

                    <TextView
                        android:id="@+id/left_drawer_user_profile_armystrength_number"
                        style="@style/OurDrawerThemeText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        android:layout_weight="1"
                        android:gravity="left" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <View
            android:id="@+id/left_drawer_activities_divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/left_drawer_header"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#303030" />

        <ListView
            android:id="@+id/left_drawer_activities_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/left_drawer_footer"
            android:layout_below="@+id/left_drawer_activities_divider"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_above="@id/left_drawer_footer"
            android:background="#303030" />

        <RelativeLayout
            android:id="@+id/left_drawer_footer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/left_drawer_footer_text">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_menu_impressum" />

            <TextView
                android:id="@+id/drawerListItem"
                style="@style/OurDrawerThemeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/icon"
                android:gravity="center_vertical"
                android:paddingRight="40dp"
                android:text="@string/impressum_label"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/left_drawer_footer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/made_with_label"
                android:textColor="#303030" />

            <ImageView
                android:id="@+id/heart"
                android:layout_width="12dp"
                android:layout_height="12dp"


                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_menu_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/in_munich_label"
                android:textColor="#303030" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
